compiler/test-data/parser/errors/module/declaration_before_import.frel
module myapp.screens

blueprint Hello { }

import myapp.Button
